--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,6 +7,14 @@
       <h1><a href="">자몽집사의 블로그</a></h1>
     </div>
 
+    {% for post in posts %}
+      <div>
+        <p>published: {{post.published_date}}</p>
+        <h1><a href="">{{post.title}}</a></h1>
+        <p>{{post.text|linebreaksbr}}</p>
+      </div>
+    {% endfor %}
+    
     <div>
       <p>published: 27.09.2019, 01:29</p>
       <h2><a href="">My first post</a></h2>
